# student-management-system

./: package.json  pnpm-lock.yaml
backend/: .gitignore  API使用说明.md  Cargo.toml  api.yml  config.toml
backend/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
backend/src/api/: activityapi.rs  announcementapi.rs  courseapi.rs  examapi.rs  homeworkapi.rs  labelapi.rs  mod.rs  postapi.rs  studentapi.rs  userapi.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  trace_layer.rs
backend/src/model/: db.rs  dbtools.rs  mod.rs
backend/src/model/models/: activity.rs  announcement.rs  comment.rs  course.rs  course_record.rs  exam.rs  exam_record.rs  homework.rs  label.rs  mod.rs  post.rs  student.rs  user.rs
backend/src/routes/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx
src/app/(root)/: layout.tsx  page.tsx
student-management-system/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
student-management-system/src-tauri/: Cargo.toml  config.toml  tauri.conf.json
student-management-system/src-tauri/capabilities/: default.json
student-management-system/src-tauri/src/: config.rs  lib.rs  main.rs
student-management-system/src/app/: layout.tsx
student-management-system/src/app/(root)/: page.tsx
student-management-system/src/app/auth/: page.tsx
student-management-system/src/app/courses/: page.tsx
student-management-system/src/app/homeworks/: page.tsx
student-management-system/src/app/register/: layout.tsx  page.tsx
student-management-system/src/app/students/: page.tsx
student-management-system/src/components/: add-course-record-dialog.tsx  add-student-dialog.tsx  course-records-dialog.tsx  create-announcement-dialog.tsx  logging-initializer.tsx  search-student-dialog.tsx  student-detail-dialog.tsx
student-management-system/src/components/ui/: spinner.tsx
student-management-system/src/lib/: http.ts  httpold.ts  log.ts  path.ts  types.ts
