[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web框架
axum = { version = "0.8", features = ["macros", "multipart", "tracing"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "any",
  "uuid",
  "time",
  "json",
  "rust_decimal",
] }
rust_decimal = { version = "1.37", features = ["serde"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 工具库
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde"] }
once_cell = "1.21.2"
toml = "0.8.8"
anyhow = "1"

# 认证
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
