[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
# tauri
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 数据库
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "any",
  "uuid",
  "time",
  "json",
] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
log = "0.4.27"
# 认证
bcrypt = "0.17.0"

# 工具库
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde"] }
once_cell = "1.21.2"
toml = "0.8.8"
anyhow = "1"
