[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
#序列化
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
#日志
log = "0.4"
#tuari
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-upload = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
#异步
tokio = { version = "1", features = ["full"] }


#编译配置
[profile.dev]
incremental = true # 以更小的步骤编译你的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 进行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑二进制文件大小。如果优先考虑速度，请使用 `3`。
panic = "abort"   # 通过禁用恐慌处理程序提高性能。
strip = true      # 确保删除调试符号。

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }
